[package]
publish = false
name = "rebar"
version = "0.1.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A biased barometer for gauging the relative speed of some regex engines on a
curated set of tasks.
"""
repository = "https://github.com/BurntSushi/rebar"
keywords = ["regex", "benchmark", "measurement", "regular", "expression"]
license = "Unlicense"
categories = ["text-processing"]
build = "build.rs"
edition = "2021"

[workspace]
members = [
  "shared/klv",
  "shared/regexredux",
  "shared/timer",
]
# We don't include regex engines in our workspace because they aren't really
# part of rebar and it would be somewhat unfortunate to need to be able to
# build them in order to work on rebar. So we split them out.
#
# Note that we have a '.vim/coc-settings.json' that overrides rust-analyzer's
# automatic workspace detection because of this. So if a new entry is added to
# this list, then '.vim/coc-settings.json' probably also needs to be updated.
exclude = [
  "byob/runner",
  "engines/hyperscan",
  "engines/icu",
  "engines/pcre2",
  "engines/re2",
  "engines/regress",
  "engines/rust/aho-corasick",
  "engines/rust/memchr",
  "engines/rust/regex",
  "engines/rust/regex-automata",
  "engines/rust/regex-lite",
  "engines/rust/regex-old",
  "engines/rust/regex-syntax",
]

[[bin]]
name = "rebar"

[dependencies]
anyhow = "1.0.28"
bstr = { version = "1.2.0", default-features = false, features = ["std"] }
csv = "1.2.0"
# Using an older version here because I am really not a fan of the dependency
# tree explosion that has happened in 0.10.
env_logger = { version = "0.9.3", default-features = false, features = ["atty", "humantime", "termcolor"] }
lexopt = "0.3.0"
log = "0.4.14"
regex-lite = "0.1.0"
serde = { version = "1.0.137", features = ["derive"] }
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
termcolor = "1.1.3"
textwrap = { version = "0.16.0", default-features = false }
toml = "0.5.11"
unicode-width = "0.1.7"
walkdir = "2.3.2"

[dependencies.klv]
path = "shared/klv"
[dependencies.regexredux]
path = "shared/regexredux"
[dependencies.timer]
path = "shared/timer"

[profile.release]
debug = true
codegen-units = 16
lto = false
