[package]
name = "main"
version = "72.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
anyhow = "1.0.69"
lexopt = "0.3.0"
libc = "0.2.139"

[dependencies.klv]
path = "../../shared/klv"
[dependencies.regexredux]
path = "../../shared/regexredux"
[dependencies.timer]
path = "../../shared/timer"

[build-dependencies]
pkg-config = "0.3.26"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
