[package]
name = "klv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bstr = { version = "1.2.0", default-features = false, features = ["std"] }

[lib]
name = "klv"
path = "lib.rs"
